INTYGFV-14370: Updated tests for changed test constructor in infra. (#326)